# leviathan

./: .clang-format  .configure-custom.sh  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  LICENSE.md  README.md  RTODO.md  TODO.md  clang-format.sh  compile.sh  compile_clang.sh  compile_gcc.sh  configure  debug.sh  leviathan.sublime-project  pltlProver.diff  pltlProver.txt  tests.index  ubuntu1604_deps.sh
checker/: CMakeLists.txt  input.hpp  json_output.cpp  json_output.hpp  main.cpp
hooks/: install.sh  pre-commit
include/: leviathan.hpp
lib/: CMakeLists.txt
lib/include/: format.hpp  formula.hpp  frame.hpp  identifiable.hpp  leviathan.hpp  lex.hpp  minisat.hpp  model.hpp  parser.hpp  pretty_printer.hpp  simplifier.hpp  solver.hpp  stack.hpp  visitor.hpp
lib/src/: format.cpp  frame.hpp  solver.cpp  tag_ptr.hpp  utility.hpp
lib/src/ast/: clause_counter.cpp  clause_counter.hpp  formula.cpp  generator.cpp  generator.hpp  pretty_printer.cpp  simplifier.cpp
lib/src/new_parser/: lex.cpp  lex.h  parser.cpp  parser.h
lib/src/parser/: Parser.h  Parser.ih  Parserbase.h  Scanner.h  Scanner.ih  Scannerbase.h  lex.cc  lex.cpp  lexer.l  parse.cc  parser.cpp  parser.y
lib/src/utils/: has_member.h  invoke.h  meta.h  raw_ptr.h  string_switch.h  support.h
ltltotrp/: LTL.hs  Main.hs  Parser.hs  ltltotrp.cabal  ltltotrp.sublime-project
ltltotrp/Output/: Alaska.hs
samples/: benchmark_data_DOC.txt  job_benchmark.txt  myconfigure.sh
src/: fast_cast.hpp  formula.cpp  formula.hpp  frame.hpp  generator.cpp  generator.hpp  identifiable.hpp  jsonOutput.cpp  jsonOutput.hpp  json_output.cpp  main.cpp  model.hpp  solver.cpp  solver.hpp  tag_ptr.hpp  visitor.cpp  visitor.hpp
src/ast/: clause_counter.cpp  formula.cpp  formula.hpp  generator.cpp  generator.hpp  pretty_printer.cpp  pretty_printer.hpp  simplifier.cpp  simplifier.hpp  visitor.hpp
src/boost/dynamic_bitset/: dynamic_bitset.hpp
src/boost/pool/: pool_alloc.hpp
src/dynamic_bitset/: dynamic_bitset
src/dynamic_bitset/dyn_bitset/: dyn_bitset.hpp  wrapper.hpp
src/minisat/core/: Solver.cc  Solver.h  SolverTypes.h
src/parser/: Parser.ih  Parserbase.h  Scanner.h  Scannerbase.h  lex.cc  lexer.l  parse.cc  parser.cpp  parser.hpp  parser.y  parser.y.output
src/tclap/: ArgException.h
starcluster/: starcluster_setup.sh
starcluster_files/: benchmark.sh  benchmark1_1000.sh  change_region.sh  fetchbench.sh  filter3.sav  filter_formulas  filter_formulas2  filter_leviathan.sh  format_benchmarks.sh  git_pull_from_sc.sh  init_cluster.sh  make_lists.sh  make_random_ltl_formulas.ml  makelog.sh  name2file.sh  optimize.sh  overhead.sh  parallel.sh  parallel_pltl_tree.sh  parse_clock.cpp  pltl_simple_bench.sh  polsat_filter.sh  ssh.sh  starcluster_setup.sh  static.py.patch  terminate_at_end_of_hour.sh  tsv2tex.pl  update_bin.sh
starcluster_files/compute16x4/: task.sh
starcluster_files/compute2x2/: starcluster_setup.sh
starcluster_files/compute36x4.qt2/: summary.sh  task.sh  test_multi_depth_all.sh
starcluster_files/reports/: SatisfiableFormulas.gnuplot  SatisfiableFormulas.sh  hybrid.sh  speedups.sh
starcluster_files/rivals/: 2reproduce.sh  can_I_parallise_pltl.sh  pltl_tree_timeouts.sh
starcluster_files/tar/root/: parallel.sh
starcluster_files/tar/root/.ssh/: config
tests/: aggregate-benchmarks.sh  casa.ltl  casa_simple.ltl  casa_simple_no_xor.ltl  cloud.sh  filter-test-timeouts.sh  ls4-1800s.csv  ltl  stop.ltl  tests.index
tests.old/paper/szymanski/: zp1.ltl  zp2.ltl
tests.old/planning/: casa.ltl  casa_simple.ltl  casa_simple_no_xor.ltl
tests.old/reynolds/: foo2.ltl
tests.old/simple/: big_rand_fair  bit_test  counter5  ncounter11  rand  test  test4
tests.old/trp/: README
tests.old/trp/N12x/1/: pltl-12-0-1-3-0-200004.negated.alaska  pltl-12-0-1-3-0-200008.negated.alaska
tests.old/trp/N12x/10/: pltl-12-0-10-3-0-200001.negated.alaska  pltl-12-0-10-3-0-200002.negated.alaska  pltl-12-0-10-3-0-200004.negated.alaska  pltl-12-0-10-3-0-200007.negated.alaska  pltl-12-0-10-3-0-200009.negated.alaska
tests.old/trp/N12x/11/: pltl-12-0-11-3-0-200001.negated.alaska  pltl-12-0-11-3-0-200004.negated.alaska  pltl-12-0-11-3-0-200007.negated.alaska  pltl-12-0-11-3-0-200008.negated.alaska  pltl-12-0-11-3-0-200009.negated.alaska
tests.old/trp/N12x/12/: pltl-12-0-12-3-0-200002.negated.alaska  pltl-12-0-12-3-0-200007.negated.alaska
tests.old/trp/N12x/13/: pltl-12-0-13-3-0-200004.negated.alaska  pltl-12-0-13-3-0-200009.negated.alaska
tests.old/trp/N12x/14/: pltl-12-0-14-3-0-200000.negated.alaska  pltl-12-0-14-3-0-200002.negated.alaska  pltl-12-0-14-3-0-200003.negated.alaska  pltl-12-0-14-3-0-200004.negated.alaska
tests.old/trp/N12x/16/: pltl-12-0-16-3-0-200000.negated.alaska  pltl-12-0-16-3-0-200001.negated.alaska  pltl-12-0-16-3-0-200006.negated.alaska
tests.old/trp/N12x/19/: pltl-12-0-19-3-0-200000.negated.alaska  pltl-12-0-19-3-0-200002.negated.alaska  pltl-12-0-19-3-0-200004.negated.alaska  pltl-12-0-19-3-0-200005.negated.alaska  pltl-12-0-19-3-0-200006.negated.alaska  pltl-12-0-19-3-0-200007.negated.alaska  pltl-12-0-19-3-0-200008.negated.alaska
tests.old/trp/N12x/2/: pltl-12-0-2-3-0-200002.negated.alaska  pltl-12-0-2-3-0-200003.negated.alaska  pltl-12-0-2-3-0-200004.negated.alaska  pltl-12-0-2-3-0-200005.negated.alaska  pltl-12-0-2-3-0-200009.negated.alaska
tests.old/trp/N12x/22/: pltl-12-0-22-3-0-200002.negated.alaska  pltl-12-0-22-3-0-200003.negated.alaska  pltl-12-0-22-3-0-200006.negated.alaska  (+1 more)
tests/lists/: H  O  R  S  S-  S0  S1  S2  S3  TESTa  U  U0  U1  U2  U3  make_O.sh
tests/paper/szymanski/: zn.ltl  zp3.ltl
tests/planning/: casa.ltl  casa2.ltl  casa_simple.ltl  casa_simple_no_xor.ltl
tests/reynolds/: foo3.ltl  foo4.ltl
tests/rozier/pattern/: nested_f_14.ltl  nested_f_4.ltl
tests/simple/: big_rand  counter  counter1  counter11  counter12  counter13  counter2  counter3  counter4  counter6  ncounter12  planning  rand2  simple.ltl  test  test2  test3  test5  test6  trp.ltl
tests/starexec/: aalta.csv  aggregate-benchmarks.sh  ls4.csv  pltl-graph.csv  pltl-tree.csv  trp++.csv
(+2030 files in other folders)
